# microReticulum_Firmware

./: .gitignore  BLESerial.cpp  BME680.h  Bluetooth.h  Boards.h  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CUSTOM_BOARDS.md  Config.h  Console.h  Device.h  Display.h  EthernetRemote.h  FileSystem.cpp  Framing.h  GPIO.h  GPIO_Control.h  LXMF_Minimal.h  LoRaInterface.h  LoRaRadio.h  LowPower.cpp  LowPower.h  PLAN_GPIO_CONTROL_v2.md  Pages.h  Power.h  Provisioning.cpp  Provisioning.h  README.md  RNode_Firmware.ino  ROM.h  Remote.h  UDPInterface.h  Utilities.h  WebSocketConsole.cpp  WebSocketConsole.h  WebSocketServer.cpp  WebSocketServer.h  XIAO_NRF52_FIX_REPORT.md  extra_script.py  (+22 more)
.pio/libdeps/heltec_wsl_v1/Crypto/: library.json
.pio/libdeps/xiao_nrf52840/Crypto/: .piopm
boards/: rak3401.json
docs/: Provisioning.md
lib/auto_interface/: .gitignore  AutoInterface.cpp  AutoInterface.h  library.json
native/: PinMap.cpp  Radio.cpp  Radio.h  TCPHostInterface.cpp  TCPHostInterface.h  config.cpp  config.h  main.cpp  pio_cmake_wrapper.py  reboot.cpp
tests/: test_firmware_image.py
variants/rak3401/: WVariant.h  variant.cpp  variant.h
webconsole/: index.html
